ingress/traefik/examples/ingress-path-based.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cheeses
  annotations:
    #kubernetes.io/ingress.class: traefik
    #ingress.kubernetes.io/rewrite-target: /
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: cheeses.example
    http:
      paths:
      - path: /stilton
        backend:
          serviceName: stilton
          servicePort: http
      - path: /cheddar
        backend:
          serviceName: cheddar
          servicePort: http
      - path: /wensleydale
        backend:
          serviceName: wensleydale
          servicePort: http
